force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__Batch_Error_Logger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Batch_Error_Logger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checking this box will enable the trigger that will catch Batch Apex Error Events</inlineHelpText>
    <label>Batch Error Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>