force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__DC_Batch_Promises__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__DC_Batch_Promises__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do this if you&apos;re getting timeout errors on page load on the js side (e.g. Visualforce Remoting Exception: Unable to connect to the server (transaction aborted: timeout)). This should fix it, but slow down the load.</inlineHelpText>
    <label>DC Batch Promises</label>
    <type>Checkbox</type>
</CustomField>