force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__DC_getFields__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__DC_getFields__c</fullName>
    <inlineHelpText>Defaults to 10 unless set here. Set the number to gradually lower than 10 if encountering an apex side issue on page load (e.g. CPU time limit exceeded). Controls how many objects are sent to apex per batch to retrieve fields.</inlineHelpText>
    <label>DC getFields</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>