force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__DC_SyncMetadataToDCBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__DC_SyncMetadataToDCBatch__c</fullName>
    <inlineHelpText>Defaults to 5 unless set here. Gradually lower the number from 5 if encountering an Apex issue upon sync from SF (e.g., FieldDefinition does not support queryMore(), use LIMIT to restrict the results to a single batch).</inlineHelpText>
    <label>DC SyncMetadataToDCBatch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>