force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__ExternalUserIdBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__ExternalUserIdBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the ExternalUserIdBatch in the Security Insights Analysis process. Defaults to 5 if nothing specified. This will need to be lowered if heap size or CPU errors occur.</inlineHelpText>
    <label>ExternalUserIdBatch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>