force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__Field_Exposure_Batch_User_Access_Rows__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Field_Exposure_Batch_User_Access_Rows__c</fullName>
    <description>This controls the number of User Access rows which are processed in a single batch for the Field Exposure Batch. Higher the number, the faster the batch will run. The max is 50,000, but depending on data volume in your org, you may need to lower this in order to avoid CPU Timeout errors in the batch. Default is set at 30,000.</description>
    <inlineHelpText>This controls the number of User Access rows which are processed in a single batch for the Field Exposure Batch. Higher the number, the faster the batch will run. The max is 50,000, but depending on data volume in your org, you may need to lower this in order to avoid CPU Timeout errors in the batch. Default is set at 30,000.</inlineHelpText>
    <label>Field Exposure Batch User Access Rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>