force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__Get_Most_Recent_External_Users__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Get_Most_Recent_External_Users__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>We like to get the most recently logged in external users from each Profile for calculation across the app. If you have millions of external Users, this could be an issue, and you can disab;e this checkbox.</inlineHelpText>
    <label>Get Most Recent External Users</label>
    <type>Checkbox</type>
</CustomField>