force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__HighRiskFieldsAccessBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__HighRiskFieldsAccessBatch__c</fullName>
    <inlineHelpText>Controls the batch size for the HighRiskFieldAccessBatch and HighRiskObjectAccessbatch in the Security Insights Analysis process. Defaults to 15 if nothing specified. Raising this will allow fewer files to be written. It may need to be lowered for orgs with lots of High Risk Fields in Permission Sets.</inlineHelpText>
    <label>HighRiskFieldsAccessBatch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>