force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__HRP_Objects_per_Fields_Request__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__HRP_Objects_per_Fields_Request__c</fullName>
    <description>This is the number of objects we will request fields for in a single batch. If you are experiencing Apex errors on page load, lower this. Raising this number will make the page load faster, but may cause Apex errors. Default is 5. Maximum is 10. Minimum is 1.</description>
    <inlineHelpText>This is the number of objects we will request fields for in a single batch. If you are experiencing Apex errors on page load, lower this. Raising this number will make the page load faster, but may cause Apex errors. Default is 5. Maximum is 10. Minimum is 1.</inlineHelpText>
    <label>HRP Objects per Fields Request</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>