force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__LoginHistoryBatch_Limit__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__LoginHistoryBatch_Limit__c</fullName>
    <description>Refers to the limit of the query in the start method of DashboardRefreshLoginHistoryBatch. Defaults to no limit if not specified. Set a limit (you can start with 500,000 and keep lowering it if errors persist) if we&apos;re getting a Visualforce Remoting Exception: String length exceeds maximum: 6000000 on the frontend</description>
    <inlineHelpText>Refers to the limit of the query in the start method of DashboardRefreshLoginHistoryBatch. Defaults to no limit if not specified. Set a limit (you can start with 500,000 and keep lowering it if errors persist) if we&apos;re getting a Visualforce Remoting Exception: String length exceeds maximum: 6000000 on the frontend</inlineHelpText>
    <label>LoginHistoryBatch Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>