force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__Migrate_Files__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Migrate_Files__c</fullName>
    <inlineHelpText>Controls the batch size on the MigrateFilesBatch and MigrateAttachmentsBatch in the migration path process. Defaults to 10 if nothing specified. This will need to be lowered (potentially down to 1) if the files are abnormally large.</inlineHelpText>
    <label>Migrate Files</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>