force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__Number_of_Records_for_Analysis__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Number_of_Records_for_Analysis__c</fullName>
    <label>Number of Records for Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1,000</fullName>
            </value>
            <value>
                <fullName>10,000</fullName>
                <default>true</default>
                <label>10,000</label>
            </value>
            <value>
                <fullName>100,000</fullName>
            </value>
            <value>
                <fullName>All Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>