force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__ObjectRelationshipsBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__ObjectRelationshipsBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the ObjectRelationshipsBatch in the Platform Encryption Analysis process. Defaults to 200 if nothing specified. This will need to be lowered if heap size or CPU errors occur.</inlineHelpText>
    <label>ObjectRelationshipsBatch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>