force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__PEA_ApexClassParserBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__PEA_ApexClassParserBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the ApexClassParserBatch in the Platform Encryption Analysis process. Defaults to 1 if nothing specified. This cannot be lowered if heap size or CPU errors occur since it is already 1, so contact support if these errors occur.</inlineHelpText>
    <label>PEA Apex Class Parser Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>