force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__PEA_ListViewParserBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__PEA_ListViewParserBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the ListViewParserBatch in the Platform Encryption Analysis process. Defaults to 50 if nothing specified. This will need to be lowered if heap size or CPU errors occur.</inlineHelpText>
    <label>PEA List View Parser Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>