force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__PEA_OrgSnapshot__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__PEA_OrgSnapshot__c</fullName>
    <inlineHelpText>Defaults to 200 unless set here. Set the number to gradually lower than 200 if the OrgSnapshot job hits heap limits</inlineHelpText>
    <label>PEA OrgSnapshot</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>