force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__Policy_Migration_Export__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Policy_Migration_Export__c</fullName>
    <description>This field is used in the Policy Migration component to determine how many Data Classification Field Levels to calculate and import at one time. The default value is 500.</description>
    <label>Policy Migration Export</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>