force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__ReportFilterParserBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__ReportFilterParserBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the ReportFilterParserBatch in the Platform Encryption Analysis process. Defaults to 50 if nothing specified. This will need to be lowered if heap size errors occur.</inlineHelpText>
    <label>ReportFilterParserBatch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>