force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__SetupAudTrailImpBatch_DisableFullQuery__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__SetupAudTrailImpBatch_DisableFullQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With this unchecked, the batch will query the full setup audit trail table. It is unchecked by default.

If this batch fails due to a query timeout (REQUEST_RUNNING_TOO_LONG), checking this box will enable a query that will look at only a subset of the records in the setup audit trail table. This will allow the batch to succeed. The number of records examined in this smaller query is configurable using the SetupAuditTrailImpersonated Batch configuration.

NOTE: With this configuration disabled/unchecked, the SetupAuditTrailImpersonated Batch configuration will have no effect.</description>
    <inlineHelpText>Unchecked by default. Check if the SetupAuditTrailImpersonatedBatch is failing with REQUEST_RUNNING_TOO_LONG.</inlineHelpText>
    <label>SetupAudTrailImpBatch DisableFullQuery</label>
    <type>Checkbox</type>
</CustomField>