force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__SI_DashboardRefreshProfileBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__SI_DashboardRefreshProfileBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the DashboardRefreshProfileBatch in the Security Insights Analysis process. Defaults to 1 if nothing specified. This cannot be lowered if heap size or CPU errors occur since it is already 1, so contact support if these errors occur.</inlineHelpText>
    <label>SI Profile Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>