force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__SI_Fill_Rates_Enabled__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__SI_Fill_Rates_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checking this box will enable the Fill Rates process in Security Insights. Make sure this is disabled if you&apos;re getting issues in Security Insights for any Fill Rates process.</inlineHelpText>
    <label>Fill Rates Enabled</label>
    <type>Checkbox</type>
</CustomField>