force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__SI_PermissionExposureBatch__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__SI_PermissionExposureBatch__c</fullName>
    <inlineHelpText>Controls the batch size on the PermissionExposureBatch in the Security Insights Analysis process. Defaults to 100 if nothing specified. This will need to be lowered if heap size or CPU errors occur.</inlineHelpText>
    <label>SI Permission Exposure Batch</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>