force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__WSW_Enable_Time_Machine__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__WSW_Enable_Time_Machine__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only Enable the time machine if the org has a small number of users and permission sets.</inlineHelpText>
    <label>WSW Enable Time Machine</label>
    <type>Checkbox</type>
</CustomField>