force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__WSW_getAccess__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__WSW_getAccess__c</fullName>
    <inlineHelpText>Defaults to 3,000 unless set here. Set the number lower (e.g., 2,000) if encountering an apex side issue on Records lens load (e.g., Too many query rows: 50,001). This controls how many records are sent to apex per batch to retrieve user access.</inlineHelpText>
    <label>WSW getAccess</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>