force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__WSW_getFieldPermissions__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__WSW_getFieldPermissions__c</fullName>
    <inlineHelpText>Defaults to 10 unless set here. Gradually set the number to lower than 10 if encountering the remote response exceeded 15 MB error while trying to load a user in the User Lens. Controls how many permission set ids are sent to apex per batch to retrieve field permissions</inlineHelpText>
    <label>WSW getFieldPermissions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>