force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__WSW_multiObjectExport_objects__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__WSW_multiObjectExport_objects__c</fullName>
    <inlineHelpText>Defaults to 30 unless set here. Set the number to gradually lower than 30 if encountering javascript issues. Controls how many objects are sent to apex per batch to retrieve user access records.</inlineHelpText>
    <label>WSW Multi Object Export - Objects</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>