force-app/main/default/objects/sc_ext__Batch_Configuration__mdt/fields/sc_ext__WSW_multiObjectExport_users__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__WSW_multiObjectExport_users__c</fullName>
    <inlineHelpText>Defaults to 10000 unless set here. Set the number lower than 10000 if encountering javascript issues. Controls how many users are sent to apex per batch to retrieve user access records.</inlineHelpText>
    <label>WSW Multi Object Export - Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>